added colors and icons to staff frontend

--- a/src/staff_webapp/src/app/components/sidebar/sidebar.component.html
+++ b/src/staff_webapp/src/app/components/sidebar/sidebar.component.html
@@ -1,8 +1,12 @@
 <div class="flex-col items-center p-5">
-  @for (item of items; track $index) {
-    <div class="flex items-center w-full cursor-pointer rounded-lg hover:bg-slate-300 h-12" [routerLink]="item.routerLink"
-      routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-      <span class="ml-5 sidebar-item">{{ item.label }}</span>
-    </div>
-  }
+  <div *ngFor="let item of items; let i = index" 
+       class="flex items-center w-full cursor-pointer rounded-lg lg:rounded-full h-12 hover:bg-secondary hover:text-white transition-colors duration-300 my-2" 
+       [routerLink]="item.routerLink" 
+       routerLinkActive="bg-secondary text-white" 
+       [routerLinkActiveOptions]="{ exact: true }">
+    <!-- Icon -->
+    <i class="{{ item.icon }} m-auto lg:m-0 lg:ml-5 text-lg"></i>
+    <!-- Label -->
+    <span class="ml-3 sidebar-item font-medium text-lg tracking-wide hidden lg:inline-block">{{ item.label }}</span>
+  </div>
 </div>
