--- a/src/staff_webapp/src/app/components/amenity-form/amenity-form.component.html
+++ b/src/staff_webapp/src/app/components/amenity-form/amenity-form.component.html
@@ -29,7 +29,7 @@
 		}
 	</div>
 	<div class="flex justify-center gap-3">
-		<button type="submit" class="bg-slate-200 p-3 rounded-lg">Submit</button>
+		<button type="submit" class="bg-black text-white p-3 rounded-lg">Submit</button>
 		<button type="button" (click)="onClose()" class="bg-red-700 text-white p-3 rounded-lg">Cancel</button>
 	</div>
 </form>
