--- a/src/staff_webapp/src/app/components/task-modal/add-task-modal.component.html
+++ b/src/staff_webapp/src/app/components/task-modal/add-task-modal.component.html
@@ -45,21 +45,21 @@
     </div>
 
     <!-- Error Message -->
-    <div *ngIf="errorMessage" class="text-red-500 mb-4">{{ errorMessage }}</div>
+    <div *ngIf="errorMessage" class="text-red-700 mb-4">{{ errorMessage }}</div>
 
     <!-- Save and Cancel Buttons -->
-    <div class="flex justify-end space-x-4">
-      <button
-        (click)="closeModal()"
-        class="bg-gray-300 text-black px-4 py-2 rounded-lg"
-      >
-        Cancel
-      </button>
+    <div class="flex justify-end space-x-2">
       <button
         (click)="saveTask()"
-        class="bg-blue-500 text-white px-4 py-2 rounded-lg"
+        class="bg-black text-white px-4 py-2 rounded-lg"
       >
         Save
+      </button>
+      <button
+        (click)="closeModal()"
+        class="bg-red-700 text-white px-4 py-2 rounded-lg"
+      >
+        Cancel
       </button>
     </div>
   </div>
