added logo, changed font, made UI changes to some elements to staff frontend

--- a/src/staff_webapp/src/app/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/staff_webapp/src/app/components/confirmation-dialog/confirmation-dialog.component.html
@@ -2,10 +2,10 @@
     <h3 class="text-2xl font-semibold mb-5">Are you sure?</h3>
     <p class="mb-6">This action cannot be undone. Do  you want to proceed?</p>
     <div class="flex justify-center gap-3">
-        <button (click)="confirmAction()" class="bg-black text-white p-3 rounded-lg">
+        <button (click)="confirmAction()" class="bg-black text-white px-4 py-2 rounded-lg">
             Confirm
         </button>
-        <button (click)="cancelAction()" class="bg-red-700 text-white p-3 rounded-lg">
+        <button (click)="cancelAction()" class="bg-red-700 text-white px-4 py-2 rounded-lg">
             Cancel
         </button>
     </div>
