--- a/src/staff_webapp/src/app/components/incident-report-form/incident-report-form.component.html
+++ b/src/staff_webapp/src/app/components/incident-report-form/incident-report-form.component.html
@@ -39,7 +39,7 @@
 		}
 	</div>
 	<div class="flex justify-center gap-3">
-		<button type="submit" class="bg-black text-white p-3 rounded-lg">Submit</button>
-		<button type="button" (click)="onClose()" class="bg-red-700 text-white p-3 rounded-lg">Cancel</button>
+		<button type="submit" class="bg-black text-white px-4 py-2 rounded-lg">Submit</button>
+		<button type="button" (click)="onClose()" class="bg-red-700 text-white px-4 py-2 rounded-lg">Cancel</button>
 	</div>
 </form>
