--- a/src/staff_webapp/src/app/pages/amenities-tab/amenities-tab.component.html
+++ b/src/staff_webapp/src/app/pages/amenities-tab/amenities-tab.component.html
@@ -29,7 +29,7 @@
         </td>
         <td class="px-4 py-4 flex gap-3 items-center justify-end">
           <button type="button" (click)="amenity.id && loadAmenity(amenity)"
-            class="bg-slate-200 rounded-lg w-9 h-9">
+            class="bg-slate-200 hover:bg-primary rounded-lg w-9 h-9">
             <i class="fa-solid fa-pen"></i>
           </button>
           <!-- <button type="button" (click)="amenity.id && deleteAmenity(amenity.id)" -->
