--- a/src/staff_webapp/src/app/components/sidebar/sidebar.component.html
+++ b/src/staff_webapp/src/app/components/sidebar/sidebar.component.html
@@ -1,12 +1,23 @@
+<div class="pt-5 px-5 flex flex-col items-center">
+  <i class="fa-solid fa-user text-2xl lg:text-4xl text-slate-300 bg-white rounded-full w-10 h-10 lg:w-20 lg:h-20 flex items-center justify-center"></i>
+  <span class="mt-3 text-base font-medium hidden lg:inline-block">Admin</span>
+</div>
 <div class="flex-col items-center p-5">
   <div *ngFor="let item of items; let i = index" 
-       class="flex items-center w-full cursor-pointer rounded-lg lg:rounded-full h-12 hover:bg-secondary hover:text-white transition-colors duration-300 my-2" 
+       class="flex items-center lg:justify-between justify-center w-full cursor-pointer rounded-lg lg:rounded-full h-11 hover:bg-secondary hover:text-white transition-colors duration-300 my-2" 
        [routerLink]="item.routerLink" 
        routerLinkActive="bg-secondary text-white" 
        [routerLinkActiveOptions]="{ exact: true }">
-    <!-- Icon -->
-    <i class="{{ item.icon }} m-auto lg:m-0 lg:ml-5 text-lg"></i>
-    <!-- Label -->
-    <span class="ml-3 sidebar-item font-medium text-lg tracking-wide hidden lg:inline-block">{{ item.label }}</span>
+    <!-- Left side with icon and label -->
+    <div class="flex items-center justify-center lg:justify-start w-full lg:pl-7">
+      <i class="{{ item.icon }} text-lg"></i>
+      <span class="ml-3 sidebar-item font-medium text-lg tracking-wide hidden lg:inline-block">{{ item.label }}</span>
+    </div>
+    <!-- Arrow indicator for active state -->
+    <div class="hidden lg:block">
+      <i class="fa-solid fa-chevron-right pr-6 hidden lg:block" 
+         [class.hidden]="!isRouteActive(item.routerLink)"
+         [class.inline-block]="isRouteActive(item.routerLink)"></i>
+    </div>
   </div>
 </div>
