--- a/src/staff_webapp/src/app/components/task-modal/task-modal.component.html
+++ b/src/staff_webapp/src/app/components/task-modal/task-modal.component.html
@@ -15,7 +15,7 @@
         <h2 class="text-2xl font-semibold">Task Details</h2>
         <button
           (click)="toggleEdit()"
-          class="ml-3 text-blue-500 hover:text-blue-700"
+          class="ml-3 text-brown"
         >
           <i class="fas fa-edit"></i>
         </button>
@@ -97,7 +97,7 @@
           (click)="toggleComplete()"
           class="bg-green-600 text-white p-2 rounded-lg"
         >
-          {{ task.status === "Completed" ? "Completed" : "Mark Complete" }}
+          {{ task.status === "Completed" ? "Completed" : "Resolved" }}
         </button>
       </div>
     </div>
