--- a/src/staff_webapp/src/styles.css
+++ b/src/staff_webapp/src/styles.css
@@ -3,5 +3,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@font-face {
+    font-family: 'Futura';
+    src: url('/assets/Jost-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+html, body { height: 100%; font-size: 103%;}
+body { margin: 0; font-family: "Futura", "Helvetica Neue", sans-serif; }
