added logo and font, changed arlet to toast, made some UI changes to guest frontend, fixed some codes on staff frontend

--- a/src/guest_webapp/src/index.css
+++ b/src/guest_webapp/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Futura';
+    src: url('assets/Jost-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+html, body {
+    height: 100%;
+    font-size: 103%;
+}
+
+body {
+    margin: 0;
+    font-family: 'Futura', 'Helvetica Neue', sans-serif;
+}
+
+.toast-body {
+    font-family: 'Futura', 'Helvetica Neue', sans-serif;
+}
