--- a/src/staff_webapp/src/app/pages/amenities-tab/amenities-tab.component.html
+++ b/src/staff_webapp/src/app/pages/amenities-tab/amenities-tab.component.html
@@ -34,7 +34,7 @@
           </button>
           <!-- <button type="button" (click)="amenity.id && deleteAmenity(amenity.id)" -->
           <button type="button" (click)="amenity.id && openConfirmWindow(amenity.id)"
-            class="bg-red-700 text-white rounded-lg w-9 h-9">
+            class="hover:bg-lightRed bg-red-700 text-white rounded-lg w-9 h-9">
             <i class="fa-solid fa-trash"></i>
           </button>
         </td>
