--- a/src/staff_webapp/src/app/pages/incident-reports-tab/incident-reports-tab.component.html
+++ b/src/staff_webapp/src/app/pages/incident-reports-tab/incident-reports-tab.component.html
@@ -30,12 +30,12 @@
 						}"
 					>{{ report.severity }}</p>
 					<div>
-						<button type="button" (click)="report.id && loadAmenity(report)"
+						<button type="button" (click)="report.id && loadReport(report)"
 							class="bg-slate-200 hover:bg-primary p-1 mr-2 rounded-md w-8 h-8 text-center">
 							<i class="fa-solid fa-pen"></i>
 						</button>
 						<button type="button" (click)="report.id && openConfirmWindow(report.id)"
-							class="bg-red-700 text-white p-1 rounded-md w-8 h-8 text-center">
+							class="hover:bg-lightRed bg-red-700 text-white p-1 rounded-md w-8 h-8 text-center">
 							<i class="fa-solid fa-trash"></i>
 						</button>
 					</div>
@@ -70,12 +70,12 @@
 						}"
 					>{{ report.severity }}</p>
 					<div>
-						<button type="button" (click)="report.id && loadAmenity(report)"
+						<button type="button" (click)="report.id && loadReport(report)"
 							class="bg-slate-200 hover:bg-primary p-1 mr-2 rounded-md w-8 h-8 text-center">
 							<i class="fa-solid fa-pen"></i>
 						</button>
 						<button type="button" (click)="report.id && openConfirmWindow(report.id)"
-							class="bg-red-700 text-white p-1 rounded-md w-8 h-8 text-center">
+							class="hover:bg-lightRed bg-red-700 text-white p-1 rounded-md w-8 h-8 text-center">
 							<i class="fa-solid fa-trash"></i>
 						</button>
 					</div>
@@ -110,12 +110,12 @@
 						}"
 					>{{ report.severity }}</p>
 					<div>
-						<button type="button" (click)="report.id && loadAmenity(report)"
+						<button type="button" (click)="report.id && loadReport(report)"
 							class="bg-slate-200 hover:bg-primary p-1 mr-2 rounded-md w-8 h-8 text-center">
 							<i class="fa-solid fa-pen"></i>
 						</button>
 						<button type="button" (click)="report.id && openConfirmWindow(report.id)"
-							class="bg-red-700 text-white p-1 rounded-md w-8 h-8 text-center">
+							class="hover:bg-lightRed bg-red-700 text-white p-1 rounded-md w-8 h-8 text-center">
 							<i class="fa-solid fa-trash"></i>
 						</button>
 					</div>
@@ -150,12 +150,12 @@
 						}"
 					>{{ report.severity }}</p>
 					<div>
-						<button type="button" (click)="report.id && loadAmenity(report)"
+						<button type="button" (click)="report.id && loadReport(report)"
 							class="bg-slate-200 hover:bg-primary p-1 mr-2 rounded-md w-8 h-8 text-center">
 							<i class="fa-solid fa-pen"></i>
 						</button>
 						<button type="button" (click)="report.id && openConfirmWindow(report.id)"
-							class="bg-red-700 text-white p-1 rounded-md w-8 h-8 text-center">
+							class="hover:bg-lightRed bg-red-700 text-white p-1 rounded-md w-8 h-8 text-center">
 							<i class="fa-solid fa-trash"></i>
 						</button>
 					</div>
