added toast to staff frontend

--- a/src/staff_webapp/src/app/pages/incident-reports-tab/incident-reports-tab.component.html
+++ b/src/staff_webapp/src/app/pages/incident-reports-tab/incident-reports-tab.component.html
@@ -23,7 +23,7 @@
 				<div class="flex items-center justify-between mt-auto">
 					<p class="text-xs mt-4 font-semibold px-2 py-1 rounded"
 						[ngClass]="{
-							'bg-green-400 text-white': report.severity === 'LOW',
+							'bg-lightGreen text-white': report.severity === 'LOW',
 							'bg-yellow-500 text-black': report.severity === 'MEDIUM',
 							'bg-orange-400 text-white': report.severity === 'HIGH',
 							'bg-red-600 text-white': report.severity === 'CRITICAL'
@@ -63,7 +63,7 @@
 				<div class="flex items-center justify-between mt-auto">
 					<p class="text-xs mt-4 font-semibold px-2 py-1 rounded"
 						[ngClass]="{
-							'bg-green-400 text-white': report.severity === 'LOW',
+							'bg-lightGreen text-white': report.severity === 'LOW',
 							'bg-yellow-500 text-black': report.severity === 'MEDIUM',
 							'bg-orange-400 text-white': report.severity === 'HIGH',
 							'bg-red-600 text-white': report.severity === 'CRITICAL'
@@ -103,7 +103,7 @@
 				<div class="flex items-center justify-between mt-auto">
 					<p class="text-xs mt-4 font-semibold px-2 py-1 rounded"
 						[ngClass]="{
-							'bg-green-400 text-white': report.severity === 'LOW',
+							'bg-lightGreen text-white': report.severity === 'LOW',
 							'bg-yellow-500 text-black': report.severity === 'MEDIUM',
 							'bg-orange-400 text-white': report.severity === 'HIGH',
 							'bg-red-600 text-white': report.severity === 'CRITICAL'
@@ -143,7 +143,7 @@
 				<div class="flex items-center justify-between mt-auto">
 					<p class="text-xs mt-4 font-semibold px-2 py-1 rounded"
 						[ngClass]="{
-							'bg-green-400 text-white': report.severity === 'LOW',
+							'bg-lightGreen text-white': report.severity === 'LOW',
 							'bg-yellow-500 text-black': report.severity === 'MEDIUM',
 							'bg-orange-400 text-white': report.severity === 'HIGH',
 							'bg-red-600 text-white': report.severity === 'CRITICAL'
