--- a/src/staff_webapp/src/app/pages/accounts-tab/accounts-tab.component.html
+++ b/src/staff_webapp/src/app/pages/accounts-tab/accounts-tab.component.html
@@ -1,35 +1,79 @@
-<div class="container mx-auto p-4">
-  <h3 class="font-semibold text-5xl mb-5">Accounts</h3>
+<h1 class="text-2xl font-bold mb-5">Accounts Manager</h1>
 
+<table class="w-full text-left table-auto border-collapse">
+  <thead class="bg-gray-100">
+    <tr>
+      <th class="border-b p-2 w-[30%]">Username</th>
+      <th class="border-b p-2 w-[20%]">Type</th>
+      <th class="border-b p-2 w-[30%]">Password</th>
+      <th class="border-b p-2 w-[20%]">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr
+      *ngFor="let account of paginatedAccounts; let i = index"
+      [ngClass]="i % 2 === 0 ? 'bg-white' : 'bg-gray-100'"
+      class="hover:bg-gray-300"
+    >
+      <td class="border-b p-2">{{ account.username }}</td>
+      <td class="border-b p-2">{{ account.type }}</td>
+      <td class="border-b p-2">{{ account.password }}</td>
+      <td class="border-b p-2 flex gap-2">
+        <button (click)="openEditModal(account)">
+          <i class="fas fa-edit text-blue-500"></i>
+        </button>
+        <button (click)="openDeleteModal(account.username)">
+          <i class="fas fa-trash text-red-500"></i>
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<div class="flex justify-end items-center mt-4">
   <button
-    type="button"
-    class="bg-blue-500 text-white p-2 rounded-lg mr-4"
+    (click)="goToPreviousPage()"
+    class="bg-gray-300 p-2 rounded w-20"
+    [disabled]="currentPage === 1"
+  >
+    Previous
+  </button>
+  <p class="mx-4">Page {{ currentPage }} of {{ totalPages }}</p>
+  <button
+    (click)="goToNextPage()"
+    class="bg-gray-300 p-2 rounded w-20"
+    [disabled]="currentPage === totalPages"
+  >
+    Next
+  </button>
+</div>
+
+<!-- Modals -->
+<app-edit-account-modal
+  *ngIf="isEditModalOpen"
+  [account]="selectedAccount"
+  (close)="closeEditModal()"
+  (save)="saveEditedAccount($event)"
+></app-edit-account-modal>
+
+<app-delete-confirmation-modal
+  *ngIf="isDeleteModalOpen"
+  [username]="usernameToDelete"
+  (close)="closeDeleteModal()"
+  (confirm)="confirmDeleteAccount($event)"
+></app-delete-confirmation-modal>
+
+<div class="flex mt-6 gap-4">
+  <button
     (click)="getAllAccounts()"
+    class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600"
   >
-    Print All Accounts
+    Fetch Accounts
   </button>
-
   <button
-    type="button"
-    class="bg-green-500 text-white p-2 rounded-lg mr-4"
     (click)="createAccount()"
+    class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600"
   >
-    Create Hardcoded Account
-  </button>
-
-  <button
-    type="button"
-    class="bg-red-500 text-white p-2 rounded-lg mr-4"
-    (click)="deleteHardcodedAccount()"
-  >
-    Delete Hardcoded Account
-  </button>
-
-  <button
-    type="button"
-    class="bg-yellow-500 text-white p-2 rounded-lg"
-    (click)="updateAccount()"
-  >
-    Update Hardcoded Account
+    Create Account
   </button>
 </div>
